--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body{
     background: lightgray;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #container{
